--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "publisher": "fraincs",
     "icon": "images/icon.png",
     "galleryBanner": {
-        "color": "#F77F4F",
+        "color": "#555967",
         "theme": "dark"
     },
     "bugs": {
